--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
                 </div>
                 <div class="form-group">
                   <label for="assumption">We believe that...</label>
-                  <input type="text" class="form-control" id="assumption" placeholder="">
+                  <textarea class="form-control" id="assumption" rows="3"></textarea>
                   <small id="assumptionHelp" class="form-text text-muted">What's the assumption you're trying to de-risk?</small>
                 </div>
                 <div class="form-group">
                   <label for="experiment">To test that we will...</label>
-                  <input type="text" class="form-control" id="experiment" placeholder="">
+                  <textarea class="form-control" id="experiment" rows="3"></textarea>
                   <small id="experimentHelp" class="form-text text-muted">Describe the experiment you plan to run.</small>
                 </div>
                 <div class="form-group">
                   <label for="metric">And measure...</label>
-                  <input type="text" class="form-control" id="metric" placeholder="">
+                  <textarea class="form-control" id="metric" rows="3"></textarea>
                   <small id="metricHelp" class="form-text text-muted">What metrics will help determine your experiment results?</small>
                 </div>
                 <div class="form-group">
                   <label for="successCriteria">We are right if...</label>
-                  <input type="text" class="form-control" id="successCriteria" placeholder="">
+                  <textarea class="form-control" id="successCriteria" rows="3"></textarea>
                   <small id="successCriteriaHelp" class="form-text text-muted">How will you know if your assumption is validated?</small>
                 </div>
               </form>
